--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 - go get github.com/kardianos/govendor
 
 script:
-- export VERSION=0.2
+- export VERSION=v0.2
 - export PRERELEASE=$(echo $VERSION | cut -d '-' -f 2)
 - make fmt
 - make test
